Fix warning in sun compiler

Warning, nullref: Initializing const myClass& to a NULL value.

Patch inspired by the one in QTBUG-16755

Task-number: QTBUG-16755